# Schule

1. Lehrjahr/117/: Acceptable Use Policy für die GBS Berufsschule.docx  Das Internet.docx  Netzwerkdiagramm.html
1. Lehrjahr/162/: 2-7.xlsx  3-9.pptx  Aufgabe4-1.xlsx  aufgabe 2-1.accdb  aufgabe 2-2.CSV  aufgabe 2-2.xlsx  aufgabe 2-3.xml  aufgabe 3-8.xlsx
1. Lehrjahr/164/: gruempelturnier.sql
1. Lehrjahr/231/: Datenschutz.docx  Krypto-Affäre (Schweiz).pptx  Modul 231.docx
1. Lehrjahr/319/C/: 2-1.c  3-1.c  3-2.c  3-3.c  4-10.c  4-11.c  4-13.c  4-14.c  4-3.c  4-6.c  5-1.c  5-5.c  5-6.c  5-8.c  5-9.c  6-3.c  6-6.c  6-7.c  6-8.c  CMakeLists.txt  payload.c  test.c
1. Lehrjahr/319/C/BerechneNullstelle_Yannick_Mueller/: main.c
1. Lehrjahr/431/: Portfolio.docx  ~WRL0004.tmp
117/: .$NetzwerkArchitekt.html.bkp  .$Netzwerkdiagramm.html.bkp  LAN, WLAN.pptx  NetzwerkArchitekt.html
162/: 6-5.xlsx  Aufgabe2-1.xlsx  Aufgabe3-7.xlsx  Modul162-Lektion01-Aufgabe1-2.xlsx  aufgabe 2-2.docx  aufgabe 2-2.txt
164/: videothek.sql
231/: 03_M231_Verträge-im-Internet4f78bb89212da23bd3d44aeb6c98895198a0fed8e000c71267784c29390846a2.docx  ~$_M231_Verträge-im-Internet4f78bb89212da23bd3d44aeb6c98895198a0fed8e000c71267784c29390846a2.docx
293/: style.css  topTenLinuxCommands.html
293/CV/: cv.html  style.css
293/gridflex/: dummy.html  style.css
319/: test.bat
319/C/: 2-2.c  2-3.c  3-2.c  4-1.c  4-12.c  4-2.c  4-4.c  4-5.c  4-7.c  4-8.c  4-9.c  5-2.c  5-4.c  5-7.c  6-1.c  6-2.c  6-4.c  6-9.c  CMakeLists.txt  Vorlage.c  test.c  test.txt  (+1 more)
431/: Portfolio.docx  ~$rtfolio.docx
(+9 files in other folders)
