cmake_minimum_required(VERSION 3.26)
project(C C)

set(CMAKE_C_STANDARD 11)

add_executable(C
        2-1.c
        2-2.c
        2-3.c
        3-1.c
        3-2.c
        3-3.c
        4-1.c
        4-2.c
        4-3.c
        4-4.c
        4-5.c
        4-6.c
        4-7.c
        4-8.c
        4-9.c
        5-5.c
        6-1.c
        6-2.c
        BerechneNullstelle_Yannick_Mueller/main.c
        6-8.c
)
